--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Contacto</title>
 </head>
 
@@ -17,8 +17,8 @@
         </a>
 
         <nav>
-            <ul>
-                <li class="menu">
+            <ul class="menu">
+                <li>
                     <a href="../index.html">Inicio</a>
                 </li>
                 <li>
@@ -54,7 +54,7 @@
         </ul>
     </div>
 
-    <H3>DEJANOS TU INFO</H3>
+    <H3>DEJANOS TUS DATOS</H3>
 
     <form>
         <div>
