--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <title>Galeria</title>
 </head>
 
@@ -18,24 +18,24 @@
     </a>
 
     <nav>
-      <ul>
-        <li class="menu">
-          <a href="../index.html">Inicio</a>
-        </li>
-        <li>
-          <a href="historia.html">Historia</a>
-        </li>
-        <li>
-          <a href="galeria.html">Galeria</a>
-        </li>
-        <li>
-          <a href="noticias.html">Noticias</a>
-        </li>
-        <li>
-          <a href="contacto.html">Contacto</a>
-        </li>
+      <ul class="menu">
+          <li>
+              <a href="../index.html">Inicio</a>
+          </li>
+          <li>
+              <a href="historia.html">Historia</a>
+          </li>
+          <li>
+              <a href="galeria.html">Galeria</a>
+          </li>
+          <li>
+              <a href="noticias.html">Noticias</a>
+          </li>
+          <li>
+              <a href="contacto.html">Contacto</a>
+          </li>
       </ul>
-    </nav>
+  </nav>
   </header>
   <hr>
 
