--- a/pages/historia.html
+++ b/pages/historia.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Historia</title>
 </head>
+
 
 <body>
     <header>
@@ -43,7 +44,6 @@
         <div class="historia-img">
             <img src="../img/foto5.jpg" alt="">
             <img src="../img/sushi12.jpg" alt="">
-
         </div>
         <div>
             <p class="parrafo-historia">
