--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="description" content="Bienvenidos a SUSHI un lugar donde lo tradicional se fusiona con lo moderno">
+    <meta name="keywords" content="SUSHI,bienvenidos,contaco,comida,historia,">
     <title>SUSHI</title>
 </head>
 
@@ -38,7 +41,7 @@
     </header>
     <hr>
     <div class="imagenes-inicio">
-        <div class="imagenes-1">
+        <div data-aos="fade-right" class="imagenes-1">
             <img src="img/shutterstock_1069605506_1_2048x2048.webp" alt="">
         </div>
         <div class="imagnes-2">
@@ -51,7 +54,17 @@
             </p>
         </div>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script> AOS.init();</script>
     <script src="../bootstrap-5.3.0-alpha3-dist/js/bootstrap.min.js"></script>
+
+    <footer>
+        <script src="https://kit.fontawesome.com/c15e3436bb.js" crossorigin="anonymous"></script>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-brands fa-instagram"></i>
+    </footer>
+
 
 </body>
 
